jenkins-k8s/busy-box-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: busybox
  namespace: jenkins
spec:
  containers:
  - image: busybox:1.28
    command:
      - sleep
      - "3600"
    imagePullPolicy: IfNotPresent
    name: busybox
  restartPolicy: Always
  hostNetwork: true
  dnsPolicy: ClusterFirstWithHostNet
