jenkins-k8s/Ingress.yaml

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: jenkins.kubectl.tk
  annotations:
    kubernetes.io/ingress.class: "nginx"    
    cert-manager.io/issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - jenkins.kubectl.tk
    secretName: jenkins-web-tls
  rules:
  - host: jenkins.kubectl.tk
    http:
      paths:
      - path: /
        backend:
          serviceName: jenkins
          servicePort: 80
